[package]
name = "regex_captures"
version = "0.1.1"
edition = "2021"
authors = ["Adam Bergmark <adam@bergmark.nl>"]
license = "MIT OR Apache-2.0"
description = "Helper for extracting and converting regex capture groups"
homepage = "https://github.com/bergmark/regex_captures"
repository = "https://github.com/bergmark/regex_captures"
documentation = "https://docs.rs/regex_captures"
readme = "README.md"

[dependencies]
anyhow = "1"
regex = "1"
